--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,13 +7,11 @@
 
 Welcome to {{title}} Hello {{user}}
 {{Product1.productName}}
- -->
+<app-product></app-product> -->
 <div class="container">
   <app-navi></app-navi>
   <div class="row">
     <div class="col-md-3"><app-category></app-category></div>
-    <div class="col-md-9"><app-product></app-product></div>
-  </div>
-
-  <router-outlet></router-outlet>
+    <div class="col-md-9"><router-outlet></router-outlet></div>
+  </div>  
 </div>
