--- a/src/app/Components/category/category.component.html
+++ b/src/app/Components/category/category.component.html
@@ -1,7 +1,8 @@
 <ul class="list-group" *ngIf="dataLoaded==true">
+    <li  [class]="GetAllCategoryClass()" [routerLink]="['/Products']" routerLinkActive="router-link-active" >Tüm Ürünler</li>
     <li (click)="setCurrentCategory(Kategoriler)"
      *ngFor="let Kategoriler of Categories" 
-     routerLink="Products/Category/{{Kategoriler.id}}"
+     routerLink="/Product/Category/{{Kategoriler.id}}"
      [class]="getCurrentCategoryClass(Kategoriler)">{{Kategoriler.name}}</li>
       </ul>
 
