--- a/src/app/Components/product/product.component.html
+++ b/src/app/Components/product/product.component.html
@@ -9,6 +9,8 @@
       <th scope="col">ProductName</th>
       <th scope="col">Description</th>
       <th scope="col">DisplayIndex</th>
+      <th scope="col">Brand ID</th>
+
     </tr>
   </thead>
   <tbody>
@@ -17,6 +19,8 @@
       <td>{{ product.name }}</td>
       <td>{{ product.description }}</td>
       <td>{{ product.displayIndex }}</td>
+      <td>{{ product.brandId}}</td>
+      
     </tr>
   </tbody>
 </table>
