--- a/src/app/Components/product/product.component.html
+++ b/src/app/Components/product/product.component.html
@@ -1,25 +1,31 @@
 <div *ngIf="dataLoaded==false" class="spinner-border" role="status">
   <span class="visually-hidden">Loading...</span>
 </div>
+<div class="mb-3">
+  <label for="filterText" class="form-label">Ürün Ara</label>
+  <input type="text" class="form-control" id="filterText" placeholder="Samsung GLX">
+</div>
 
 <table class="table" *ngIf="dataLoaded==true">
   <thead>
     <tr>
-      <th scope="col">#</th>
-      <th scope="col">ProductName</th>
-      <th scope="col">Description</th>
-      <th scope="col">DisplayIndex</th>
-      <th scope="col">Brand ID</th>
+      <th >#</th>
+      <th >ProductName</th>
+      <th >Description</th>
+      <th>DisplayIndex</th>
+      <th>Brand ID</th>
+      <th>KDVli Fi</th>
 
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let product of products">
       <td>{{ product.id}}</td>
-      <td>{{ product.name }}</td>
+      <td>{{ product.name | uppercase}}</td> <!--Tüm Harfler Büyük-->
       <td>{{ product.description }}</td>
       <td>{{ product.displayIndex }}</td>
       <td>{{ product.brandId}}</td>
+      <td>{{ product.brandId |vatAdded:10 |currency}}</td>
       
     </tr>
   </tbody>
