--- a/src/app/Components/product/product.component.html
+++ b/src/app/Components/product/product.component.html
@@ -29,7 +29,7 @@
       <td>{{ product.displayIndex }}</td>
       <td>{{ product.brandId}}</td>
       <td>{{ product.brandId |vatAdded:10 |currency}}</td>
-      <td><button (click)="AddtoCard()" class="btn btn-success">Sepete Ekle</button></td>
+      <td><button (click)="AddtoCart(product)" class="btn btn-success">Sepete Ekle</button></td>
     </tr>
   </tbody>
 </table>
